--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "crypto-js": "^4.1.1",
+    "flowbite": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
@@ -53,6 +55,7 @@
     "@fluencelabs/aqua": "^0.8.0-368",
     "@fluencelabs/aqua-lib": "^0.6.0",
     "@fluencelabs/fluence": "^0.27.5",
+    "@types/react-modal": "^3.13.1",
     "autoprefixer": "^10.4.13",
     "chokidar-cli": "^3.0.0",
     "postcss": "^8.4.21",
