--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@fluencelabs/fluence-network-environment": "^1.0.13",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,8 +20,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-particles": "^2.9.3",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "tsparticles": "^2.9.3",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
