--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
+    "ethers": "^6.4.0",
     "flowbite": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
