--- a/package.json
+++ b/package.json
@@ -1,71 +1,73 @@
 {
-  "name": "explorer",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@fluencelabs/fluence-network-environment": "^1.0.13",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/crypto-js": "^4.1.1",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.11",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "axios": "^1.4.0",
-    "crypto-js": "^4.1.1",
-    "ethers": "^6.4.0",
-    "flowbite": "^1.6.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-modal": "^3.16.1",
-    "react-particles": "^2.9.3",
-    "react-router-dom": "^6.6.2",
-    "react-scripts": "5.0.1",
-    "tsparticles": "^2.9.3",
-    "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "postinstall": "copy-marine public",
-    "prestart": "npm run compile-aqua",
-    "prebuild": "npm run compile-aqua",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "compile-aqua": "aqua -i ./aqua/ -o ./src/_aqua",
-    "watch-aqua": "chokidar \"**/*.aqua\" -c \"npm run compile-aqua\""
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@fluencelabs/aqua": "^0.8.0-368",
-    "@fluencelabs/aqua-lib": "^0.6.0",
-    "@fluencelabs/fluence": "^0.27.5",
-    "@types/react-modal": "^3.13.1",
-    "autoprefixer": "^10.4.13",
-    "chokidar-cli": "^3.0.0",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
-  }
+	"name": "explorer",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@fluencelabs/fluence": "^0.28.0",
+		"@fluencelabs/fluence-network-environment": "^1.0.14",
+		"@fortawesome/fontawesome-svg-core": "^6.4.0",
+		"@fortawesome/free-solid-svg-icons": "^6.4.0",
+		"@fortawesome/react-fontawesome": "^0.2.0",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
+		"@types/crypto-js": "^4.1.1",
+		"@types/jest": "^27.5.2",
+		"@types/node": "^16.18.11",
+		"@types/react": "^18.0.26",
+		"@types/react-dom": "^18.0.10",
+		"axios": "^1.4.0",
+		"crypto-js": "^4.1.1",
+		"ethers": "^6.4.0",
+		"flowbite": "^1.6.2",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-modal": "^3.16.1",
+		"react-particles": "^2.9.3",
+		"react-router-dom": "^6.6.2",
+		"react-scripts": "5.0.1",
+		"tsparticles": "^2.9.3",
+		"typescript": "^4.9.4",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"postinstall": "copy-marine public",
+		"prestart": "npm run compile-aqua",
+		"prebuild": "npm run compile-aqua",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"compile-aqua": "aqua -i ./aqua/ -o ./src/_aqua",
+		"watch-aqua": "chokidar \"**/*.aqua\" -c \"npm run compile-aqua\""
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			"chrome >= 67",
+			"edge >= 79",
+			"firefox >= 68",
+			"opera >= 54",
+			"safari >= 14"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@fluencelabs/aqua": "^0.9.4",
+		"@fluencelabs/aqua-lib": "^0.6.0",
+		"@types/react-modal": "^3.13.1",
+		"autoprefixer": "^10.4.13",
+		"chokidar-cli": "^3.0.0",
+		"postcss": "^8.4.21",
+		"tailwindcss": "^3.2.4"
+	}
 }
