--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_JSON_RPC_URL=https://dev.fluence.0x3zero.com/api/v0/json-rpc
 REACT_APP_COLLABEAT_NFT=0x0692f233614802D06e86CBDE6b5D090A9F5d3c10
+REACT_APP_NONCE=0
