--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.10",
 		"axios": "^1.4.0",
+		"classnames": "^2.3.2",
 		"crypto-js": "^4.1.1",
 		"dayjs": "^1.11.8",
 		"ethers": "^6.4.0",
@@ -32,6 +33,7 @@
 		"react-particles": "^2.9.3",
 		"react-router-dom": "^6.6.2",
 		"react-scripts": "5.0.1",
+		"react-tooltip": "^5.18.0",
 		"tsparticles": "^2.9.3",
 		"typescript": "^4.9.4",
 		"web-vitals": "^2.1.4",
